--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
-<head> Sample webpage </head>
-<title> Sample </title>
+<title> Vemuri Sai Manohar </title>
 <body>
 <h1> Welcome </h1>
-<h3 align="center"> Heading 1: </h3>
-<h6> Heading 2: </h6>
 <p>  Sic Mundus Creatus Est <br>
 Thus, the world was created </p>
 </body>
