--- a/forms.html
+++ b/forms.html
@@ -1,5 +1,26 @@
 <html>
     <body>
-        
+        <form action="https://mvemuri6642.github.io/" target="_self">
+            <label for="Firstname">Firstname:</label></br>
+            <input type="text" id="Firstname" name="Firstname"/><br>
+            <label for="Lastname">Lastname:</label></br>
+            <input type="text" id="Lastname" name="Lastname" /><br>
+
+            <label>Gender</label><br>
+            <input type="radio" id="male"  name="gender">
+            <label for="male">Male</label><br>
+            <input type="radio" id="female"  name="gender">
+            <label for="male">Female</label><br>
+
+            <label>Device</label></br>
+            <input type="checkbox" id="mobile" name="mobile" value="mobile">
+            <label for="mobile">Mobile</label><br>
+            <input type="checkbox" id="laptop" name="laptop" value="laptop">
+            <label for="laptop">Laptop</label><br>
+            <input type="checkbox" id="both" name="both" value="both">
+            <label for="both">Both</label><br>
+
+            <input type="submit" value="submit">
+        </form>
     </body>
 </html>
