--- a/forms.html
+++ b/forms.html
@@ -6,21 +6,30 @@
             <label for="Lastname">Lastname:</label></br>
             <input type="text" id="Lastname" name="Lastname" /><br>
 
+
+            <label for="Email">Email</label><br>
+            <input type="Email" id="Email" name="Email"><br>
+
+
+            <label for="Password">Password</label><br>
+            <input type="password" id="Password" name="Password"><br>
+
             <label>Gender</label><br>
             <input type="radio" id="male"  name="gender">
             <label for="male">Male</label><br>
             <input type="radio" id="female"  name="gender">
             <label for="male">Female</label><br>
 
+
             <label>Device</label></br>
             <input type="checkbox" id="mobile" name="mobile" value="mobile">
             <label for="mobile">Mobile</label><br>
             <input type="checkbox" id="laptop" name="laptop" value="laptop">
             <label for="laptop">Laptop</label><br>
-            <input type="checkbox" id="both" name="both" value="both">
-            <label for="both">Both</label><br>
+
 
             <input type="submit" value="submit">
+            
         </form>
     </body>
 </html>
