--- a/multitextclassspan.html
+++ b/multitextclassspan.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Vemuri Sai Manohar</title>
+        <title>multi color</title>
         <style>
             .multicolortext{
                 background-image: linear-gradient(to left,violet,indigo,green,blue,yellow,orange,red);
@@ -13,13 +13,7 @@
     </head>
     <body>
         <h1>
-            <span class="multicolortext"> Vemuri Sai Manohar </span>
+            <span class="multicolortext"> Happy Birthday </span>
         </h1>
-        <p>
-            <span class="multicolortext">
-                Sic Mundus Creatus Est <br>
-                Thus, the world was created
-            </span>
-        </p>
     </body>
 </html>
