--- a/index.html
+++ b/index.html
@@ -1,25 +1,9 @@
 <html>
     <head>
-        <title>Vemuri Sai Manohar</title>
-        <style>
-            .multicolortext{
-                background-image: linear-gradient(to left,violet,indigo,green,blue,yellow,orange,red);
-                -webkit-background-clip: text;
-                -moz-background-clip: text;
-                -background-clip: text;
-                color: transparent;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="style.css"
     </head>
     <body>
-        <h1>
-            <span class="multicolortext"> Vemuri Sai Manohar </span>
-        </h1>
-        <p>
-            <span class="multicolortext">
-                Sic Mundus Creatus Est <br>
-                Thus, the world was created
-            </span>
-        </p>
+        <h1><CSE</h1>
+        <p>Hello, World</p>
     </body>
 </html>
