--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
                 Thus, the world was created
             </span>
         </p>
+        <a href="tables.html">tables</a>
     </body>
 </html>
