--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
                 Thus, the world was created
             </span>
         </p>
-        <a href="tables.html">tables</a>
+        <a href="tables.html">Click Here</a>
     </body>
 </html>
