--- a/forms.html
+++ b/forms.html
@@ -1,39 +1,44 @@
 <html>
+    <head>
+        <style>
+            .content{
+                max-width: 500px;
+                margin: auto;
+            }
+        </style>
+    </head>
     <body>
-        <form action="https://mvemuri6642.github.io/" target="_self">
-            <label for="Firstname">Firstname:</label></br>
-            <input type="text" id="Firstname" name="Firstname"/><br>
-            <label for="Lastname">Lastname:</label></br>
-            <input type="text" id="Lastname" name="Lastname" /><br>
+        <div class="content">
+            <form action="https://mvemuri6642.github.io/" target="_self">
+                <label for="Firstname">Firstname:</label></br>
+                <input type="text" id="Firstname" name="Firstname"/><br>
+                <label for="Lastname">Lastname:</label></br>
+                <input type="text" id="Lastname" name="Lastname" /><br>
 
 
-            <label for="Email">Email</label><br>
-            <input type="Email" id="Email" name="Email"><br>
+                <label for="Email">Email</label><br>
+                <input type="Email" id="Email" name="Email"><br>
 
 
-            <label for="Password">Password</label><br>
-            <input type="password" id="Password" name="Password"><br>
+                <label for="Password">Password</label><br>
+                <input type="password" id="Password" name="Password"><br>
 
-            <label>Gender</label><br>
-            <input type="radio" id="male"  name="gender">
-            <label for="male">Male</label><br>
-            <input type="radio" id="female"  name="gender">
-            <label for="male">Female</label><br>
-
-
-            <label>Device</label></br>
-            <input type="checkbox" id="mobile" name="mobile" value="mobile">
-            <label for="mobile">Mobile</label><br>
-            <input type="checkbox" id="laptop" name="laptop" value="laptop">
-            <label for="laptop">Laptop</label><br>
+                <label>Gender</label><br>
+                <input type="radio" id="male"  name="gender">
+                <label for="male">Male</label><br>
+                <input type="radio" id="female"  name="gender">
+                <label for="male">Female</label><br>
 
 
-            <input type="submit" value="submit">
+                <label>Device</label></br>
+                <input type="checkbox" id="mobile" name="mobile" value="mobile">
+                <label for="mobile">Mobile</label><br>
+                <input type="checkbox" id="laptop" name="laptop" value="laptop">
+                <label for="laptop">Laptop</label><br>
 
-            
-        </form>
 
-
-        
+                <input type="submit" value="submit">
+            </form>
+        </div>
     </body>
 </html>
