--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Vemuri Sai Manohar</title>
+        <link rel="stylesheet" href="style.css">
         <style>
             .multicolortext{
                 background-image: linear-gradient(to left,violet,indigo,green,blue,yellow,orange,red);
@@ -9,18 +10,20 @@
                 -background-clip: text;
                 color: transparent;
             }
+
         </style>
     </head>
     <body>
-        <h1>
+        <h1><center>
             <span class="multicolortext"> Vemuri Sai Manohar </span>
-        </h1>
-        <p>
+        </center></h1>
+        <p><center>
             <span class="multicolortext">
                 Sic Mundus Creatus Est <br>
                 Thus, the world was created
             </span>
-        </p>
-        <a href="tables.html">Click Here</a>
+        </center></p>
+        <center><a href="forms.html">Click Here</a></center>
+
     </body>
 </html>
