--- a/forms.html
+++ b/forms.html
@@ -1,10 +1,12 @@
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <style>
             .content{
                 max-width: 500px;
                 margin: auto;
             }
+            
         </style>
     </head>
     <body>
