--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
     <head>
         <title>Vemuri Sai Manohar</title>
-        <link rel="stylesheet" href="style.css">
         <style>
             .multicolortext{
-                background-image: linear-gradient(to left,violet,indigo,green,blue,yellow,orange,red);
+                background-image: linear-gradient(to right,#4285F4,#DB4437,#F4B400,#0F9D58);
                 -webkit-background-clip: text;
                 -moz-background-clip: text;
                 -background-clip: text;
