--- a/resume.html
+++ b/resume.html
@@ -27,9 +27,9 @@
         <div class="profile-info">
             <h1>Manohar Vemuri</h1>
             <div class="social-media">
-                <a href="https://www.facebook.com/MV.01001101.01010110/" target="_blank"><img src="social-media/facebook.jpg" alt="Facebook"><a href=""></a>
-                <a href="https://www.linkedin.com/in/mvemuri6642/" target="_blank"><img src="social-media/linkedin.jpg" alt="Linkedin"></a>
-                <a href="https://github.com/mvemuri6642/" target="_blank"><img src="social-media/github.png" alt="Linkedin"></a>
+                <a href="https://www.facebook.com/MV.01001101.01010110/" target="_blank"><img src="facebook.jpg" alt="Facebook"><a href=""></a>
+                <a href="https://www.linkedin.com/in/mvemuri6642/" target="_blank"><img src="linkedin.jpg" alt="Linkedin"></a>
+                <a href="https://github.com/mvemuri6642/" target="_blank"><img src="github.png" alt="Linkedin"></a>
             </div>
             
             
