--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="resume/style1.css">
+        <link rel="stylesheet" href="style1.css">
         <title>Resume</title>
         <script src="http://fontawesome.com/b99e675b6e.js"></script>
         <style>
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="profile-img">
-            <img src="resume/profile-img.jpg" alt="Profile Picture" width="300" height="350">
+            <img src="profile-img.jpg" alt="Profile Picture" width="300" height="350">
             <h2><center>Menu</center></h2>
             <h4><center>Home</center></h4>
             <h4><center>About</center></h4>
@@ -27,9 +27,9 @@
         <div class="profile-info">
             <h1>Manohar Vemuri</h1>
             <div class="social-media">
-                <a href="https://www.facebook.com/MV.01001101.01010110/" target="_blank"><img src="resume/social-media/facebook.jpg" alt="Facebook"><a href=""></a>
-                <a href="https://www.linkedin.com/in/mvemuri6642/" target="_blank"><img src="resume/social-media/linkedin.jpg" alt="Linkedin"></a>
-                <a href="https://github.com/mvemuri6642/" target="_blank"><img src="resume/social-media/github.png" alt="Linkedin"></a>
+                <a href="https://www.facebook.com/MV.01001101.01010110/" target="_blank"><img src="facebook.jpg" alt="Facebook"><a href=""></a>
+                <a href="https://www.linkedin.com/in/mvemuri6642/" target="_blank"><img src="linkedin.jpg" alt="Linkedin"></a>
+                <a href="https://github.com/mvemuri6642/" target="_blank"><img src="github.png" alt="Linkedin"></a>
             </div>
             
             
@@ -43,10 +43,10 @@
         </div>
         <div class="education">
             <h2>Education</h2>
-            <a href="http://www.srkrec.edu.in/" target="_blank"><img src="resume/srkr.jpg" alt=""></a><h4>SRKR Engineering College<br>
+            <a href="http://www.srkrec.edu.in/" target="_blank"><img src="srkr.jpg" alt=""></a><h4>SRKR Engineering College<br>
                 Bachelor's degree, Computer Science<br>
                 2019 - 2022<br></h4><br>
-                <img src="resume/crr.jfif" alt=""></a><h4>Sir C.R.R Polytechnic <br>
+                <img src="crr.jfif" alt=""></a><h4>Sir C.R.R Polytechnic <br>
                     Diploma, Computer Science <br>
                     2016 - 2019<br></h4>
 
