--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="skills">
             <h2>Skills</h2><br>
             <p>Python (Programming Language) • C (Programming Language) • Algorithms • <br>
-                 Data Structures • Linux • .NETFramework • Git</p>
+                 Data Structures • Linux •  Git</p>
                  <br><hr>
         </div>
 
