--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
         <title>Vemuri Sai Manohar</title>
         <title>Resume</title>
-        <script src="http://fontawesome.com/b99e675b6e.js"></script>
-        
-        <style>
-        </style>
+
     </head>
     <body>
         <div class="profile-img">
@@ -20,20 +17,22 @@
         </div>
         <div class="profile-info">
             <h1>Manohar Vemuri</h1>
-            <p>CS Undergrad</p>
+            <p>CS Graduate Student</p>
         </div>
         <div class="summary">
             <h2>Summary</h2>
-            <p> Studying B.Tech Computer Science and Engineering(CSE) 
-                at SRKR Engineering College</p>
+            <p> Studying MS Computer Science at Illinois Institute of Technology</p>
                 <br>
                 <hr>
-
+                
         </div>
         <div class="education">
             <h2>Education</h2>
+            <a href="http://www.iit.edu/" target="_blank"><img src="iit.jpg" alt=""></a><h4>Illinois Institute of Technology<br>
+                Master's degree, Computer Science<br>
+                2022 - 2024<br></h4><br>
             <a href="http://www.srkrec.edu.in/" target="_blank"><img src="srkr.jpg" alt=""></a><h4>SRKR Engineering College<br>
-                Bachelor's degree, Computer Science<br>
+                Bachelor's degree, Computer Science and Engineering<br>
                 2019 - 2022<br></h4><br>
                 <img src="crr.jfif" alt=""></a><h4>Sir C.R.R Polytechnic <br>
                     Diploma, Computer Science <br>
@@ -44,6 +43,16 @@
         </div>
         <div class="lic">
             <h2>Licenses & Certifications</h2><br>
+            <img src="coursera.png" alt=""></a><h4>Supervised Machine Learning: Regression and Classification</h4><br>
+            <p>Coursera<br>Issued July 2022 · No Expiration Date <br>Credential ID X5FG3WFPJACQ <br> 
+                <a href="https://www.coursera.org/account/accomplishments/certificate/X5FG3WFPJACQ"
+                target="_blank">See Credential</a>
+            </p> <br> <br>
+            <img src="coursera.png" alt=""></a><h4>Machine Learning with Python</h4><br>
+            <p>Coursera<br>Issued Nov 2021 · No Expiration Date <br>Credential ID TDB23JKME49P <br> 
+                <a href="https://www.coursera.org/account/accomplishments/certificate/TDB23JKME49P"
+                target="_blank">See Credential</a>
+            </p> <br> <br>
             <img src="coursera.png" alt=""></a><h4>Algorithmic Toolbox</h4><br>
             <p>Coursera<br>Issued Jun 2020 · No Expiration Date <br>Credential ID HR3Z6E67VCXD <br> 
                 <a href="https://www.coursera.org/account/accomplishments/certificate/HR3Z6E67VCXD"
