--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <a href="https://www.github.com/mvemuri6642"><img src="/imgs/github.png" alt="Github"></a>
         <a href="mailto:saimanoharvemuri333@gmail.com"><img src="/imgs/email.jpg" alt="Email"></a>
       </div>
+      <br><br><br><br><br>
+      <a href="sample.html">Hey Bro! Click Here</a>
   </div>
   <div id="right">
     <h2>Skills</h2>
