--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="social-links">
         <a href="https://www.linkedin.com/in/mvemuri6642"><img src="/imgs/linkedin.jpg" alt="Facebook"></a>
         <a href="https://www.github.com/mvemuri6642"><img src="/imgs/github.png" alt="Github"></a>
-        <a href="mailto:saimanoharvemuri333@gmail.com"><img src="/imgs/email.jpg" alt="Email"></a>
+        <a href="mailto:vemurimanohar6642@gmail.com"><img src="/imgs/email.jpg" alt="Email"></a>
       </div>
   </div>
   <div id="right">
