--- a/index.html
+++ b/index.html
@@ -35,24 +35,27 @@
         <br>
         <li>Diploma., Computer Science &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&emsp;&emsp;&emsp;&emsp; Sir C. R. Reddy Polytechnic, Eluru (April 2019)</li>
       </ul>
+    <div id="work">
     <h2>Work Experience</h2>
     <h4>Data Analyst @ Illinois Institute of Technology <i>(May 2022 - June 2022)</i></h4>
-    <ul class="work-text" style="width: 800px;">
+    <ul class="work-text">
     <li>Conducted statistical analysis on global Facebook ad campaigns, utilizing techniques such as correlation analysis, ANOVA, and regression to identify areas for optimization.</li>
     <br>
     <li>Applied regression analysis to achieve a 5% cost reduction through targeted campaign enhancements. 
         Delivered actionable insights and clear visualizations to optimize ad performance and enhance campaign success.</li>
     </ul>
     <h4>Network Engineer Industrial Trainee @ CISCO AND SIR C.R.R POLYTECHNIC <i>(Nov 2018 - April 2019)</i></h4>
-    <ul class="work-text" style="width: 800px;">
+    <ul class="work-text">
     <li>Engaged with diverse computer network technologies, encompassing the setup and arrangement of routers and switches, 
         and achieved CCNA certification during the training tenure.</li>
     <br>
     <li>Gained hands-on familiarity with computer networking concepts, routing protocols, and troubleshooting techniques. 
         Utilized JAVA programming for protocol implementation and contributed to e-mail programming (SMTP, POP) and file transfer protocol integration.</li>
     </ul>
+    </div>
+
     <h2>Publications</h2>
-    <ul class="publications-text" style="width: 800px;">
+    <ul class="publications-text">
     <li>Sai Manohar Vemuri, Sesha Shai Datta Kolli, Pavan Sai Vatrapu “Kidney Stones Detection using Image
          Processing and Deep Neural Networks.” International Journal for Research in Engineering Application & Management (IJREAM), 
         ISSN:2454-9150, Vol-08, Issue-03, June 2022.  DOI: 10.35291/2454-9150.2022.0343.</li>
